# Web_HW_7

./: main.py
hw/: alembic.ini  config.ini  main.py  pyproject.toml  test_commands.txt
hw/alembic/versions/: 2c60c73604cb_new.py  3087cabc9cde_new1.py  37955acc272e_initial.py  49ad12e23f46_.py  593993ec4f58_.py  8c584176ac69_test.py  ffef02c682d9___.py
hw/migrations/: env.py
hw/migrations/versions/: 67d9a8a241c0_init.py
hw/seed/: seed.py
hw/src/: conect_db.py  create_table.py  crud.py  main.py  managers.py  models.py  my_select.py  seed.py  students.py  teachers.py
