[tool.poetry]
name = "web-hw-7"
version = "0.1.0"
description = ""
authors = ["Max <maxkryvytskyiwork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.0"
sqlalchemy = "^2.0.22"
psycopg2 = "^2.9.9"
faker = "^19.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
